<resources>
    <string name="app_name">Pomiary</string>
    <string name="tab_std">Standard LH/RH</string>
    <string name="tab_max">Maxi LH/RH</string>
    <string name="tab_history">History</string>
    <string name="tab_settings">Settings</string>
    <string name="new_msg">New&#8230;</string>
    <string name="check_msg">Checking&#8230;</string>
    <string name="save_msg">Saving&#8230;</string>
    <string name="load_msg">Loading&#8230;</string>
    <string name="copy_msg">Copying&#8230;</string>
    <string name="text_P6_0">P6 (*), mm</string>
    <string name="text_P6_P">P6 (|), mm</string>
    <string name="text_P6_1">P6 (1), mm</string>
    <string name="text_P6_2">P6 (2), mm</string>
    <string name="text_P6_3">P6 (3), mm</string>
    <string name="text_P6_4">P6 (4), mm</string>
    <string name="text_P6_5">P6 (5), mm</string>
    <string name="text_P6_6">P6 (6), mm</string>
    <string name="text_P6_7">P6 (7), mm</string>
    <string name="text_P6_8">P6 (8), mm</string>
    <string name="text_P6_9">P6 (9), mm</string>
    <string name="text_P6_10">P6 (10), mm</string>
    <string name="text_P7_0">P7 (*), mm</string>
    <string name="text_P7_P">P7 (|), mm</string>
    <string name="text_P7_1">P7 (1), mm</string>
    <string name="text_P7_2">P7 (2), mm</string>
    <string name="text_P7_3">P7 (3), mm</string>
    <string name="result_Ok">OK</string>
    <string name="result_Nok">NOK</string>
    <string name="tolerance_standard">Tolerance Standard</string>
    <string name="tolerance_maxi">Tolerance Maxi</string>
    <string name="warning_nok_value">Warning for NOK, mm</string>
    <string name="show_base_point">Show base point (*)</string>
    <string name="show_profile_point">Show profile point</string>
    <string name="input_format">Input format\n(w/o decimal point)</string>
    <string name="tolerance_invalid">Additional tolerance\nfor valid input, mm</string>
    <string name="prev_msg">Previous</string>
    <string name="next_msg">Next</string>
    <string name="show_raw">Show RAW</string>
    <string name="show_values">Values</string>

    <string-array name="analysis">
        <item>Sill Seal</item>
        <item>Sill Seal (RAW)</item>
        <item>Cutting</item>
        <item>Moldings</item>
    </string-array>
</resources>