<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    tools:context=".ui.main.StandardFragment">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonRefreshStandard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_popup_sync" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:fadeScrollbars="false"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TableRow
                android:id="@+id/rowStandardP6_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP6_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP6_0"
                    android:text="@string/text_P6_0" />

                <EditText
                    android:id="@+id/editStandardP6_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/textResultStandardP6_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP6_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP6_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP6_1"
                    android:text="@string/text_P6_1" />

                <EditText
                    android:id="@+id/editStandardP6_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="4"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/textResultStandardP6_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP6_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP6_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP6_2"
                    android:text="@string/text_P6_2" />

                <EditText
                    android:id="@+id/editStandardP6_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/textResultStandardP6_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP6_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP6_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP6_3"
                    android:text="@string/text_P6_3" />

                <EditText
                    android:id="@+id/editStandardP6_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textResultStandardP6_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP6_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP6_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP6_1"
                    android:text="@string/text_P6_4" />

                <EditText
                    android:id="@+id/editStandardP6_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textResultStandardP6_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP6_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP6_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP6_5"
                    android:text="@string/text_P6_5" />

                <EditText
                    android:id="@+id/editStandardP6_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textResultStandardP6_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP6_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP6_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP6_6"
                    android:text="@string/text_P6_6" />

                <EditText
                    android:id="@+id/editStandardP6_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textResultStandardP6_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP6_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP6_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP6_7"
                    android:text="@string/text_P6_7" />

                <EditText
                    android:id="@+id/editStandardP6_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textResultStandardP6_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP6_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP6_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP6_8"
                    android:text="@string/text_P6_8" />

                <EditText
                    android:id="@+id/editStandardP6_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/textResultStandardP6_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP6_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <TableRow
                android:id="@+id/rowStandardP7_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP7_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP7_0"
                    android:text="@string/text_P7_0" />

                <EditText
                    android:id="@+id/editStandardP7_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/textResultStandardP7_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP7_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP7_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP7_1"
                    android:text="@string/text_P7_1" />

                <EditText
                    android:id="@+id/editStandardP7_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/textResultStandardP7_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP7_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP7_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP7_2"
                    android:text="@string/text_P7_2" />

                <EditText
                    android:id="@+id/editStandardP7_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/textResultStandardP7_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP7_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textP7_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/editStandardP7_3"
                    android:text="@string/text_P7_3" />

                <EditText
                    android:id="@+id/editStandardP7_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned|numberDecimal"
                    android:selectAllOnFocus="true" />

                <TextView
                    android:id="@+id/textResultStandardP7_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textNokStandardP7_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />

            </TableRow>
        </TableLayout>
    </ScrollView>

</FrameLayout>